fix: bugfix-001-display-readable-date-note-function - Fixed the date format to display hh:mm xm dd mm instead of seconds

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     height:100vh;
     display:flex;
     gap:1.5rem;
-    padding:2.5rem
+    padding:2.5rem;
 }
 
 .custom-scroll::-webkit-scrollbar{
